--- a/TrashCollector/Views/Account/Register.cshtml
+++ b/TrashCollector/Views/Account/Register.cshtml
@@ -29,12 +29,17 @@
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
+    @*<div class="form-group">
+        @Html.Label("user Role", new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DropDownList("UserRoles", (SelectList)ViewBag.Name, "Select Role")
+        </div>
+    </div>*@
     <div class="form-group">
         @Html.Label("user Role", new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.DropDownList("Name")
-            @Html.DropDownList("UserRoles", (SelectList)ViewBag.Name, " ")
-        </div>
+            @Html.DropDownListFor(m => m.UserRoles, new SelectList(ViewBag.Name, "Name", "Name"), "Select Role", null);
+            </div>
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
