--- a/TrashCollector/Views/Account/Register.cshtml
+++ b/TrashCollector/Views/Account/Register.cshtml
@@ -30,13 +30,13 @@
         </div>
     </div>
     @*<div class="form-group">
-        @Html.Label("user Role", new { @class = "col-md-2 control-label" })
+        @Html.Label("User Role", new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.DropDownList("UserRoles", (SelectList)ViewBag.Name, "Select Role")
         </div>
     </div>*@
     <div class="form-group">
-        @Html.Label("user Role", new { @class = "col-md-2 control-label" })
+        @Html.Label("User Role", new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.DropDownListFor(m => m.UserRoles, new SelectList(ViewBag.Name, "Name", "Name"), "Select Role", null);
             </div>
