--- a/TrashCollector/Views/Customers/Details.cshtml
+++ b/TrashCollector/Views/Customers/Details.cshtml
@@ -94,5 +94,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @*@Html.ActionLink("Back to List", "Index")*@
 </p>
