--- a/TrashCollector/Views/Customers/Index.cshtml
+++ b/TrashCollector/Views/Customers/Index.cshtml
@@ -44,10 +44,10 @@
         <th></th>*@
     </tr>
 
-        @foreach (var item in Model){
+        @*@foreach (var item in Model){*@
     <tr>
         <td>
-            @Html.DisplayFor(modelItem  => item.name)
+            @Html.DisplayFor(modelItem  => Model.name)
         </td>
         @*<td>
             @Html.DisplayFor(modelItem => item.address)
@@ -77,9 +77,9 @@
             @Html.DisplayFor(modelItem => item.endDate)
         </td>*@
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
+            @Html.ActionLink("Edit", "Edit", new { id=Model.id }) |
+            @Html.ActionLink("Details", "Details", new { id=Model.id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=Model.id })
         </td>
     </tr>
 }
