--- a/TrashCollector/Views/Customers/Create.cshtml
+++ b/TrashCollector/Views/Customers/Create.cshtml
@@ -58,7 +58,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.pickupDay, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.pickupDay, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(m => m.pickupDay,
+               new SelectList(Enum.GetValues(typeof(DayOfWeek))),
+               "Pickup Day")
                 @Html.ValidationMessageFor(model => model.pickupDay, "", new { @class = "text-danger" })
             </div>
         </div>
