added actionlinks to index and dayindex views and added object attributes in the right spots so that the employee can view customers on a specific day

--- a/TrashCollector/Views/Employees/Index.cshtml
+++ b/TrashCollector/Views/Employees/Index.cshtml
@@ -85,13 +85,13 @@
         </tr>
     }
     <div>
-        @Html.ActionLink("Monday", "DayIndex", "Monday")
-        @Html.ActionLink("Tuesday", "DayIndex", "Tuesday")
-        @Html.ActionLink("Wednesday", "DayIndex", "Wednesday")
-        @Html.ActionLink("Thursday", "DayIndex")
-        @Html.ActionLink("Friday", "DayIndex")
-        @Html.ActionLink("Saturday", "DayIndex")
-        @Html.ActionLink("Sunday", "DayIndex")
+        @Html.ActionLink("Monday", "DayIndex", "Employees", new { day = "Monday" }, null)
+        @Html.ActionLink("Tuesday", "DayIndex", "Employees", new { day = "Tuesday" }, null)
+        @Html.ActionLink("Wednesday", "DayIndex", "Employees", new { day = "Wednesday" }, null)
+        @Html.ActionLink("Thursday", "DayIndex", "Employees", new { day = "Thursday" }, null)
+        @Html.ActionLink("Friday", "DayIndex", "Employees", new { day = "Friday" }, null)
+        @Html.ActionLink("Saturday", "DayIndex", "Employees", new { day = "Saturday" }, null)
+        @Html.ActionLink("Sunday", "DayIndex", "Employees", new { day = "Sunday" }, null)
 
     </div>
 
