--- a/TrashCollector/Views/Employees/Index.cshtml
+++ b/TrashCollector/Views/Employees/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<TrashCollector.Models.Customer>
-@* This is for employees to see *@
+@* This is for employees to see- employees view *@
 @{
     ViewBag.Title = "Index";
 }
@@ -41,48 +41,57 @@
         <th>
             @Html.DisplayNameFor(model => model.endDate)
         </th>
-        <th></th>
+      
+        <th>
+            @Html.DisplayNameFor(model => model.isCompleted)
+        </th>
+        <th>
+        </th>
     </tr>
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.city)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.state)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.zipCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.pickupDay)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.balance)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.extraPickupDay)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.startDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.endDate)
-            </td>
-            <td>
-                @*@Html.ActionLink("Edit", "Edit", new { id = item.id }) |*@
-                @*@Html.ActionLink("Details", "Details",  item)*@
-                @Html.ActionLink("Delete", "Delete", new { id = item.id })
-            </td>
-        </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.name)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.address)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.city)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.state)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.zipCode)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.pickupDay)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.balance)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.extraPickupDay)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.startDate)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.endDate)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.isCompleted)
+    </td>
+    <td>
+        @*@Html.ActionLink("Edit", "Edit", new { id = item.id }) |*@
+        @*@Html.ActionLink("Details", "Details",  item)*@
+        @Html.ActionLink("Edit", "Edit", new { id = item.id })
+        @Html.ActionLink("Delete", "Delete", new { id = item.id })
+    </td>
+</tr>
     }
     <div>
         @Html.ActionLink("Monday", "DayIndex", "Employees", new { day = "Monday" }, null)
