--- a/TrashCollector/Views/Home/About.cshtml
+++ b/TrashCollector/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Trash Collector is an app created to help trash collection employees and their customers.</p>
