--- a/TrashCollector/Views/Account/Register.cshtml
+++ b/TrashCollector/Views/Account/Register.cshtml
@@ -32,7 +32,7 @@
     <div class="form-group">
         @Html.Label("User Role", new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.DropDownListFor(m => m.UserRoles, new SelectList(ViewBag.Name, "Name", "Name"), "Select Role", null);
+            @Html.DropDownListFor(m => m.UserRoles, new SelectList(ViewBag.Name, "Name", "Name"), "Select Role");
             </div>
     </div>
     <div class="form-group">
