added google map functionality for employee to view customer's address as a pin on a map

--- a/TrashCollector/Views/Employees/CustomersIndex.cshtml
+++ b/TrashCollector/Views/Employees/CustomersIndex.cshtml
@@ -1,7 +1,7 @@
-﻿@model TrashCollector.Models.Employee>
+﻿@model IEnumerable<TrashCollector.Models.Customer>
 @* This is for employees to see- employees view *@
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "CustomersIndex";
 }
 
 <h2>List of customers for today</h2>
