--- a/TrashCollector/Views/Employees/DayIndex.cshtml
+++ b/TrashCollector/Views/Employees/DayIndex.cshtml
@@ -77,6 +77,7 @@
             </td>
             <td>
                 @Html.ActionLink("Delete", "Delete", new { id = item.id })
+                @Html.ActionLink("See on a map", "SeePinOnMap", "Customers"@*, new { id = item.id }*@)
             </td>
         </tr>
     }
